test/functions/nspark/fcf-rettype-void.good
fcf-rettype-void.chpl:3: error: illegal use of function that does not return a value
