test/functions/nspark/fcf-rettype-void.chpl
{
  var F = lambda () { writeln(42); };
  writeln(F.retType:string);
}
